# spot_esp32

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  main.c
main/adc_monitor/: adc_monitor.c  adc_monitor.h
main/buzzer/: buzzer.c  buzzer.h
main/charge/: charge.c  charge.h
main/display/: display.c
main/drivers/: ina226.c  ina226.h  st7735s.c  st7735s.h
main/encoder/: encoder.c  encoder.h
main/ui/: ui.c  ui.h
main/weld/: weld.c  weld.h
